--- a/src/app/pages/home/components/current-weather/current-weather.component.html
+++ b/src/app/pages/home/components/current-weather/current-weather.component.html
@@ -5,7 +5,9 @@
 
         <jv-detailed-weather [weather]="cityWeather.weather"> </jv-detailed-weather>
         <div class="card-actions">
-            <a class="card-link"> Adicionar aos Favoritos</a>
+            <a class="card-link" (click)="onToggleBookmark()"> 
+                {{ isFavorite ? 'Remover dos favoritos' : 'Adicionar aos favoritos' }}
+            </a>
             <a class="card-link" routerLink="/details" > Ver detalhes</a>
         </div>
 
